add xml scan tables

--- a/help/en_US/scilab_en_US_help/getFILE.html
+++ b/help/en_US/scilab_en_US_help/getFILE.html
@@ -20,7 +20,7 @@
 
       </td>
       <td width="30%" class="next">
-      	<span class="next"><a href="postURL.html">postURL &gt;&gt;</a></span>
+      	<span class="next"><a href="iot_display.html">iot_display &gt;&gt;</a></span>
 
       </td>
     </tr></table>
@@ -78,7 +78,7 @@
 
       </td>
       <td width="30%" class="next">
-      	<span class="next"><a href="postURL.html">postURL &gt;&gt;</a></span>
+      	<span class="next"><a href="iot_display.html">iot_display &gt;&gt;</a></span>
 
       </td>
     </tr></table>
