--- a/help/en_US/scilab_en_US_help/index.html
+++ b/help/en_US/scilab_en_US_help/index.html
@@ -176,6 +176,12 @@
 
 
 
+<li><a href="iot_display.html" class="refentry">iot_display</a> &#8212; <span class="refentry-description">pt = h.data;</span></li>
+
+
+
+
+
 <li><a href="postURL.html" class="refentry">postURL</a> &#8212; <span class="refentry-description">Post command for curl library</span></li>
 
 
@@ -357,6 +363,12 @@
 
 
 <li><a href="x_string_plot.html" class="refentry">x_string_plot</a> &#8212; <span class="refentry-description">Plot a graph with x data in string format</span></li>
+
+
+
+
+
+<li><a href="xmlScanAllTable.html" class="refentry">xmlScanAllTable</a> &#8212; <span class="refentry-description">Import All xml/html Tables into Scilab</span></li>
 
 
 
