--- a/help/en_US/scilab_en_US_help/postURL.html
+++ b/help/en_US/scilab_en_US_help/postURL.html
@@ -12,7 +12,7 @@
     <div class="manualnavbar">
     <table width="100%"><tr>
       <td width="30%">
-    	<span class="previous"><a href="getFILE.html">&lt;&lt; getFILE</a></span>
+    	<span class="previous"><a href="iot_display.html">&lt;&lt; iot_display</a></span>
 
       </td>
       <td width="40%" class="center">
@@ -68,7 +68,7 @@
     <tr><td colspan="3" class="next"><a href="http://bugzilla.scilab.org/enter_bug.cgi?product=Scilab%20software&component=Documentation%20pages" class="ulink">Report an issue</a></td></tr>
 <tr>
       <td width="30%">
-    	<span class="previous"><a href="getFILE.html">&lt;&lt; getFILE</a></span>
+    	<span class="previous"><a href="iot_display.html">&lt;&lt; iot_display</a></span>
 
       </td>
       <td width="40%" class="center">
