--- a/help/en_US/scilab_en_US_help/x_string_plot.html
+++ b/help/en_US/scilab_en_US_help/x_string_plot.html
@@ -20,7 +20,7 @@
 
       </td>
       <td width="30%" class="next">
-      	<span class="next"><a href="xmlScanTable.html">xmlScanTable &gt;&gt;</a></span>
+      	<span class="next"><a href="xmlScanAllTable.html">xmlScanAllTable &gt;&gt;</a></span>
 
       </td>
     </tr></table>
@@ -76,7 +76,7 @@
 
       </td>
       <td width="30%" class="next">
-      	<span class="next"><a href="xmlScanTable.html">xmlScanTable &gt;&gt;</a></span>
+      	<span class="next"><a href="xmlScanAllTable.html">xmlScanAllTable &gt;&gt;</a></span>
 
       </td>
     </tr></table>
