--- a/help/en_US/scilab_en_US_help/xmlScanTable.html
+++ b/help/en_US/scilab_en_US_help/xmlScanTable.html
@@ -12,7 +12,7 @@
     <div class="manualnavbar">
     <table width="100%"><tr>
       <td width="30%">
-    	<span class="previous"><a href="x_string_plot.html">&lt;&lt; x_string_plot</a></span>
+    	<span class="previous"><a href="xmlScanAllTable.html">&lt;&lt; xmlScanAllTable</a></span>
 
       </td>
       <td width="40%" class="center">
@@ -37,15 +37,15 @@
 
 
 <div class="refsynopsisdiv"><h3 class="title">Syntax</h3>
-   <div class="synopsis"><pre><span class="default">tb</span><span class="default"> = </span><span class="functionid">xmlScanTable</span><span class="default">(</span><span class="default">doc</span><span class="default">, </span><span class="default">tbname</span><span class="default">,</span><span class="default">level</span><span class="default">)</span></pre></div></div>
+   <div class="synopsis"><pre><span class="default">tb</span><span class="default"> = </span><span class="functionid">xmlScanTable</span><span class="default">(</span><span class="default">doc</span><span class="default">, </span><span class="default">tbname</span><span class="default">, </span><span class="default">with_header</span><span class="default">)</span></pre></div></div>
 
 <div class="refsection"><h3 class="title">Parameters</h3>
    <dl><dt><span class="term">doc :</span>
             <dd><p class="para">An xml document which is obtained from htmlRead</p></dd></dt>
-        <dt><span class="term">tbname :</span>
-            <dd><p class="para">Table name given in the &#0034;class&#0034; tag</p></dd></dt>
-        <dt><span class="term">level :</span>
-            <dd><p class="para">The nth level to the access of table data</p></dd></dt>
+        <dt><span class="term">tbid :</span>
+            <dd><p class="para">Table id given in the &#0034;id&#0034; tag (second search on &#0034;class&#0034; tag)</p></dd></dt>
+        <dt><span class="term">with_header :</span>
+            <dd><p class="para">Table with header, default is %t</p></dd></dt>
         <dt><span class="term">tb :</span>
             <dd><p class="para">Return table in string</p></dd></dt></dl></div>
 
@@ -55,7 +55,7 @@
    <p class="para"></p></div>
 
 <div class="refsection"><h3 class="title">See also</h3>
-   <ul class="itemizedlist"></ul></div>
+   <ul class="itemizedlist"><li class="member"><a href="xmlScanAllTable.html" class="link">xmlScanAllTable</a> &#8212; Import All xml/html Tables into Scilab</li></ul></div>
 
 <div class="refsection"><h3 class="title">Authors</h3>
    <ul class="itemizedlist"><li class="member">C.L. Tan, Bytecode</li></ul></div>
@@ -66,7 +66,7 @@
     <tr><td colspan="3" class="next"><a href="http://bugzilla.scilab.org/enter_bug.cgi?product=Scilab%20software&component=Documentation%20pages" class="ulink">Report an issue</a></td></tr>
 <tr>
       <td width="30%">
-    	<span class="previous"><a href="x_string_plot.html">&lt;&lt; x_string_plot</a></span>
+    	<span class="previous"><a href="xmlScanAllTable.html">&lt;&lt; xmlScanAllTable</a></span>
 
       </td>
       <td width="40%" class="center">
